@@ -179,3 +179,7 @@ MODELCONVERTED.text=Datenmodell erfolgreich konvertiert
 RESTRICT.text=RESTRICT
 PROMPTFORPASSWORD.text=Kennwort vor Verbindungsaufbau erfragen
 PLEASEENTERDATABASEPASSWORD.text=Bitte geben Sie das Datenbankkennwort ein
+HIDE.text=Verbergen
+MENUSUBJECTAREAS.text=Subject Areas
+SHOWALL.text=Alle anzeigen
+HIDEALL.text=Alle verbergen
